--- a/src/components/Titles/titles.module.css
+++ b/src/components/Titles/titles.module.css
@@ -1,8 +1,11 @@
 .title {
+	display: flex;
 	font-size: medium;
-	background-color: #738cff;
+	background-color: #484848;
 	margin: 10px;
 	padding: 5px;
 	border-radius: 5px;
+	justify-content: center;
+	align-items: center;
 	color: #fff;
 }
